deploy/kubernetes/gcloud-ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: graf-external
  namespace: monitoring
  labels:
    name: graf-external
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - graf.kube-practice.ru
    secretName: kube-practice-graf-tls
  rules:
  - host: graf.kube-practice.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: grafana
            port: 
              number: 3000
