deploy/kubernetes/gcloud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: front-end-external
  namespace: sock-shop
  labels:
    name: front-end-external
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - app.kube-practice.ru
    secretName: kube-practice-app-tls
  rules:
  - host: app.kube-practice.ru
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: front-end
            port: 
              number: 80
